adding redis integration and refactoring users routes
